--- a/TBJGameSDK/simulator/CMakeLists.txt
+++ b/TBJGameSDK/simulator/CMakeLists.txt
@@ -68,13 +68,17 @@ include_directories(
 if (${SIMULATOR_ENV} STREQUAL "Dev")
 	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Thread)
 	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TBJGameSDK)
-	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TBJGameHttp)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TBJGameSDK/android_sysroot)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TBJGameHttp)
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../taoemsdk/wasmruntime_simulator/thirdparty/libpng/include)
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../taoemsdk/wasmruntime_simulator/thirdparty/libjpg/include)
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../taoemsdk/wasmruntime_simulator/thirdparty/libz/include)
     link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../taoemsdk/wasmruntime_simulator/thirdparty/libpng/lib)
     link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../taoemsdk/wasmruntime_simulator/thirdparty/libjpg/lib)
 else()
+    if (DEFINED SIMULATOR_CUSTOM_INCLUDE)
+        include_directories(${SIMULATOR_CUSTOM_INCLUDE})
+    endif()
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
     if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/libpng/include/png.h")
             execute_process(
